# PartitionCache

./: .env.example  .env.integration  .gitignore  CLAUDE.md  LICENSE  README.md  TEST_SPEC.md  docker-compose.integration.yml  pyproject.toml  test_env_vars.py
.cursor/: environment.json
.github/: micromamba-env.yml
.github/docker/postgres-cron/: Dockerfile  init-pg-cron.sql
.github/workflows/: integration-tests.yml  integration_tests.yml  integration_tests.yml.backup  rocksdb-conda-tests.yml  tests.yml
docs/: README.md  api_reference.md  architecture_diagrams.md  cache_eviction.md  cache_handlers.md  cli_reference.md  complete_workflow_example.md  datatype_support.md  duckdb_acceleration.md  integration_test_guide.md  manage_cache_cli.md  migration_guide.md  p0_table_handling.md  pg_cron_cross_database_setup.md  postgresql_queue_processor.md  production_deployment.md  queue_system.md  system_overview.md  two_queue_system.md
examples/benchmark/: README.md  run_benchmark.py
examples/benchmark/config/: nyc_taxi.yaml  osm_poi.yaml  ssb.yaml  tpch.yaml
examples/nyc_taxi_benchmark/: .env.example  README.md  docker-compose.yml  generate_nyc_taxi_data.py  run_nyc_taxi_benchmark.py
examples/openstreetmap_poi/: .env.example  Dockerfile  README.md  docker-compose.yml  init-db.sh  process_osm_data.py  run_poi_queries.py  test_workflow.py
examples/openstreetmap_poi/testqueries_examples/: q2.sql  q3.sql
examples/ssb_benchmark/: .env.example  README.md  generate_ssb_data.py  run_ssb_benchmark.py
examples/tpch_benchmark/: .env.example  README.md  generate_tpch_data.py  run_tpch_benchmark.py
scripts/: build_postgres_image.sh  ci_env_config.py  create_clean_test_database.py  install_pg_extensions.sh  load_env.sh  run_integration_tests.sh  setup_integration_testing.sh  setup_test_data.py  stop_integration_testing.sh  test_ci_compatibility.sh  verify_pg_extensions.py  with_integration_env.sh
src/partitioncache/: __init__.py  apply_cache.py  logging_utils.py  query_accelerator.py  query_processor.py  queue.py
src/partitioncache/cache_handler/: __init__.py  abstract.py  datatype_utils.py  duckdb_bit.py  environment_config.py  helper.py  postgis_bbox.py  postgis_h3.py  postgis_spatial_abstract.py  postgresql_abstract.py  postgresql_array.py  postgresql_bit.py  postgresql_cache_eviction.sql  postgresql_cache_eviction_cache.sql  postgresql_cache_eviction_cron.sql  postgresql_cache_handlers.sql  postgresql_roaringbit.py  redis.py  redis_abstract.py  redis_bit.py  redis_roaringbit.py  redis_set.py  rocks_db.py  rocks_db_abstract.py  rocks_db_bit.py  rocks_db_set.py  rocks_dict.py  rocksdict_abstract.py  rocksdict_h3_grouped.py  rocksdict_roaringbit.py  shelf.py  shelve.py
src/partitioncache/cli/: __init__.py  add_to_cache.py  common_args.py  manage_cache.py  monitor_cache_queue.py  postgresql_cache_eviction.py  (+4 more)
tests/: TEST_SPEC.md  test_add_to_cache.py  test_apply_cache.py  test_direct_processor.py  test_manage_cache.py  test_manage_cache_cli.py  test_monitor_cache_queue.py  test_multi_partition_cache_handlers.py  test_postgresql_array_cache_handler.py  test_postgresql_bit_cache_handler.py  test_postgresql_queue_processor.py  test_query_processor.py  test_query_processor_extract_query_conditions.py  test_queue.py  test_read_from_cache.py  test_redis_bit_cache_handler.py  test_redis_cache_handler.py
tests/integration/: __init__.py  conftest.py  test_batch_fragment_queue.py  test_cache_backends.py  test_cache_optimization_integration.py  test_cache_performance.py  test_cli.py  test_constraint_to_cache_pipeline.py  test_cross_backend_operations.py  test_cross_database_pg_cron.py  test_duckdb_acceleration_integration.py  test_duckdb_bit_integration.py  test_end_to_end_workflows.py  test_error_recovery.py  test_eviction_job_naming.py  test_job_name_construction.py  test_maintenance_operations.py  test_manual_queue_processor.py  test_monitor_acceleration_integration.py  test_monitor_queue_consumption.py  test_multi_database_job_naming.py  test_multiple_table_prefixes.py  test_non_blocking_queue_functions.py  test_pg_cron_integration.py  test_queue_edge_cases.py  test_queue_processor.py  test_spatial_cache.py  test_spatial_postgis_ci.py  test_spatial_postgis_e2e.py  test_utils.py
tests/pytest/: test_advanced_query_patterns.py  test_all_connected_subgraphs.py  test_apply_cache.py  test_bitsize_expansion_fix.py  test_common_args_duration.py  test_constraint_modifications.py  test_distance_normalization.py  test_duckdb_bit_cache_handler.py  test_empty_where_clause_fix.py  test_exists_and_orphan_removal.py  test_manage_cache_cli.py  test_metadata_table_creation.py  test_monitor_cache_queue.py  test_multi_partition_cache_handlers.py  test_partition_key_source_table.py  test_partition_paradigm.py  test_postgresql_array_cache_handler.py  test_postgresql_bit_cache_handler.py  test_postgresql_cache_eviction_cli.py  test_postgresql_queue_processor.py  test_postgresql_roaringbit_cache_handler.py  test_query_accelerator.py  test_query_cleaning_order_by_limit.py  test_query_interface.py  test_query_normalization.py  test_query_processing_comprehensive.py  test_query_processor.py  test_query_processor_alias_counting.py  test_query_processor_extract_query_conditions.py  test_query_processor_partition_join_comprehensive.py  test_query_processor_robustness.py  test_query_processor_star_join_comprehensive.py  test_queue.py  test_redis_bit_cache_handler.py  test_redis_cache_handler.py  test_redis_roaringbit_cache_handler.py  test_rocksdict_cache_handler.py  test_rocksdict_h3_grouped.py  test_rocksdict_roaringbit_cache_handler.py  test_singleton_close_lifecycle.py  (+2 more)
tests/unit/: test_metadata_table_creation.py
(+210 files in other folders)
